updated attacks and pictures

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 </head>
 <body>
-<!-- <audio controls autoplay>
-  <source src="elitefour.mp3" type="audio/mpeg">
-</audio> -->
 
+
+
+<!-- some simple "code editor" where you can highlight lines of text/code one by one and edit the text. when you hold ctrl or something everything fades out a bit and you hover over lines to bring them to full opacity -->
   <div id='bg_image'>
     <div id='player'>
      <p class='name'>Pokemon</p>
