finished battle scene

--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
 
 </head>
 <body>
+<audio controls autoplay>
+  <source src="elitefour.mp3" type="audio/mpeg">
+</audio>
 
 
+<div class="health-bar" data-total="1000" data-value="1000">
+  <div class="bar">
+      <div class="hit"></div>
+  </div>
+</div>
+
+<br />
+
+<button class="damage random">hit random</button>
+<button class="reset">reset</button>
+
+<div class="log">
+  <div>What's going on...</div>
+</div>
 
 <!-- some simple "code editor" where you can highlight lines of text/code one by one and edit the text. when you hold ctrl or something everything fades out a bit and you hover over lines to bring them to full opacity -->
   <div id='bg_image'>
